# Real-Time-Translation-App

./: .gitignore  README.ja.md  README.md  download_streaming_zipformer.py  download_zipformer.py  mise.toml  test_ws.py
backend/: download_models.py  inspect_sherpa.py  inspect_vad.py  pyproject.toml  server.py  test_model_load.py  test_vad_local.py
backend/app/: server.py
backend/core/: config.py
backend/services/transcription/: hybrid_service.py  mlx_whisper_service.py  moonshine_service.py  parakeet_service.py
backend/tests/: test_model_load.py  test_vad_local.py  verify_hybrid_flow.py  verify_import.py  verify_server_startup.py  verify_websocket.py  verify_zipformer_punct.py
backend/utils/: analyze_offset.py  analyze_pcm_2.py  check_dir.py  check_help.py  check_help_moonshine.py  check_server.py  inspect_recognizer.py  text_processing.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/log/: route.ts
frontend/components/: Controls.tsx  LanguageSelector.tsx  ModeSelector.tsx  ModelSelector.tsx
frontend/hooks/: useAudioRecorder.ts
frontend/lib/: logger.ts
