[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.2",
    "onnxruntime>=1.23.2",
    "sherpa-onnx>=1.12.23",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "huggingface_hub>=0.20.0",
]
