[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "numpy<2.4.0",
    "onnxruntime>=1.23.2",
    "sherpa-onnx>=1.10.30",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "huggingface_hub>=0.20.0",
    "mlx-whisper>=0.4.1",
]
